--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+    }
 }
 
 dependencies {
@@ -34,6 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
     implementation 'com.google.firebase:firebase-ml-natural-language:18.2.0'
+    implementation 'com.google.firebase:firebase-ml-natural-language-smart-reply-model:18.0.0'
     implementation 'com.google.firebase:firebase-ml-natural-language-language-id-model:18.0.3'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
